netcfg (0.67) UNRELEASED; urgency=low

  * Per Olofsson
    - Fixed segfault in find_in_devnames when a card was missing a devnames
      entry.
  * Otavio Salvador 
    - Write the common data before the static configuration so the file is
      not replaced anymore (Closes: #250740).
  * Joshua Kwan
    - add a NETCFG_VERSION thingy so it's easier to figure out who's using
      what.

 -- Per Olofsson <pelle@dsv.su.se>  Mon, 24 May 2004 21:57:42 +0200

netcfg (0.66) unstable; urgency=low

  * Joshua Kwan
    - Ask for a hostname and domain when user chooses not to configure the
      network.
    - Add useful canned IPv6 entries into the hosts file.
  * Updated translations:
    - Slovenian (sl.po) by Jure Čuhalev
    - Traditional Chinese (zh_TW.po) by Tetralet

 -- Joshua Kwan <joshk@triplehelix.org>  Mon, 24 May 2004 08:11:57 -0700

netcfg (0.65) unstable; urgency=low

  * Joshua Kwan
    - Fix machine state in static configuration to call QUIT.
      (Closes: #250074)
    - Rewrite resolv.conf in static configuration once we acquire a
      domain name.
    - DHCP server is not required to supply a domain name. (Closes: #250021)
    - Switch to using mii-diag-udeb instead of mii-lite.c, which doesn't
      seem to work across the board. (also addresses #250074)
    - In static configuration, if the IP address specified turns out to be
      the same as what we suggest for the gateway, nuke the last part of
      the dotted quad because gateway == IP makes no sense. (Closes: #241490)
    - Turn off backup for error messages in static configuration.
    - Bake all of the getif* functions into one big char**-returning jelly
      roll, get_all_ifs().
  * Bastian Blank
    - Make it buildable again on s390.
  * Updated translations:
    - Bulgarian (bg.po) by Ognyan Kulev
    - Catalan (ca.po) by Jordi Mallach
    - German (de.po) by Alwin Meschede
    - Spanish (es.po) by Javier Fernandez-Sanguino Peña
    - Basque (eu.po) by Piarres Beobide Egaña